# RAGVerse_AI

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  pyproject.toml  requirements.txt
app/: main.py
app/core/: settings.py
app/database/: postgres.py
app/evaluation/: compare_scores.py  config.py  dataset_loader.py  pipeline_runner.py  ragas_eval.py  ragas_scorer.py  report_generator.py
app/graph/: builder.py  state.py
app/graph/nodes/: chat_node.py
app/llm/: embeddings.py  models.py  prompts.py
app/retrieval/: advanced_retriever.py  ingest.py  ingest_hotpotqa.py  retriever.py
app/services/: chat_service.py
app/utils/: helpers.py  validators.py
data/eval/: baseline_report.txt  baseline_results.csv  baseline_summary.csv
