[project]
name = "ragverse-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-community==0.4.1",
    "langchain-core==1.4.0",
    "langchain-google-genai==4.2.3",
    "langchain-text-splitters==1.1.2",
    "langgraph==1.2.1",
    "psycopg==3.3.4",
    "python-dotenv==1.2.2",
    "rich==15.0.0",
]
